<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/fg_menu_ig_user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorMain"/>

    <TextView
        android:id="@+id/fg_menu_tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/user_name"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/fg_menu_ig_user_icon"
        app:layout_constraintLeft_toRightOf="@+id/fg_menu_ig_user_icon"
        app:layout_constraintStart_toStartOf="@+id/fg_menu_ig_user_icon"
        app:layout_constraintTop_toBottomOf="@+id/fg_menu_ig_user_icon" />

    <TextView
        android:id="@+id/fg_menu_tv_user_center"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fg_menu_more_bg"
        android:drawableEnd="@drawable/fg_menu_more_arrow_18dp"
        android:gravity="center"
        android:paddingStart="12dp"
        android:paddingEnd="4dp"
        android:text="@string/user_center"
        android:textColor="#000"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/fg_menu_ll_top"
        app:layout_constraintEnd_toEndOf="@+id/fg_menu_tv_user_name"
        app:layout_constraintStart_toStartOf="@+id/fg_menu_tv_user_name"
        app:layout_constraintTop_toBottomOf="@+id/fg_menu_tv_user_name" />

    <LinearLayout
        android:id="@+id/fg_menu_ll_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/fg_menu_tv_user_center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fg_menu_tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/status"
                android:textColor="#000"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fg_menu_tv_friends"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/friends"
                android:textColor="#000"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fg_menu_tv_fans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fans"
                android:textColor="#000"
                android:textSize="12sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/fg_menu_ll_middle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@id/fg_menu_ll_top">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/fg_menu_tv_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/at_me"
                android:gravity="center"
                android:textColor="#000"
                android:drawableTop="@drawable/ic_whatshot_red_800_24dp"
                android:drawablePadding="4dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/fg_menu_tv_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/comment_cn"
                android:gravity="center"
                android:textColor="#000"
                android:drawableTop="@drawable/ic_comment_green_a400_24dp"
                android:drawablePadding="4dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/fg_menu_tv_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/zan_cn"
                android:gravity="center"
                android:textColor="#000"
                android:drawableTop="@drawable/ic_thumb_up_yellow_a400_24dp"
                android:drawablePadding="4dp"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>