<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#fff">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/comment_card_user_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:src="@drawable/icon_user"
            app:civ_border_width="1dp"
            app:civ_border_color="#F7F7F7"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/comment_card_context"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackgroundBorderless">

        <TextView
            android:id="@+id/comment_card_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="13sp"
            android:textColor="@color/colorMain"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/comment_card_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
            android:text="@string/status_text"
            android:textColor="#000"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comment_card_user_name" />

        <TextView
            android:id="@+id/comment_card_create_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_at"
            android:textSize="12sp"
            android:textColor="@color/usercenterLightTextColor"
            app:layout_constraintLeft_toLeftOf="@id/comment_card_text"
            app:layout_constraintTop_toBottomOf="@id/comment_card_text"/>

        <ImageView
            android:id="@+id/comment_card_like"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_favorite"
            android:gravity="start|center"
            android:textColor="#b9b9b9"
            android:textSize="12sp"
            android:padding="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/comment_card_text"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E7E7E7"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@id/comment_card_create_at"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>