<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/uc_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/uc_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:background="@color/colorMainDark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/uc_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="#fff"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:paddingBottom="8dp"
                android:background="#fff"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/uc_top_image"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:src="@drawable/ic_user_center_background"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/uc_civ_user_img"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/icon_user"
                    app:civ_border_color="#EBEBEB"
                    app:civ_border_width="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/uc_tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_name"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/uc_civ_user_img"
                    app:layout_constraintTop_toBottomOf="@+id/uc_civ_user_img" />

                <TextView
                    android:id="@+id/uc_tv_user_location_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/location"
                    android:textColor="@color/usercenterLightTextColor"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="@+id/uc_tv_user_name"
                    app:layout_constraintTop_toBottomOf="@+id/uc_tv_user_name"/>

                <TextView
                    android:id ="@+id/uc_tv_user_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/description"
                    android:textColor="#000"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="@+id/uc_tv_user_location_gender"
                    app:layout_constraintTop_toBottomOf="@+id/uc_tv_user_location_gender"/>

                <TextView
                    android:id="@+id/uc_tv_fans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/fans_cn"
                    android:textColor="@color/usercenterLightTextColor"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="@+id/uc_tv_user_description"
                    app:layout_constraintTop_toBottomOf="@+id/uc_tv_user_description"/>

                <TextView
                    android:id ="@+id/uc_tv_user_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8sp"
                    android:text="@string/zero"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@+id/uc_tv_fans"
                    app:layout_constraintBottom_toBottomOf="@+id/uc_tv_fans"/>

                <TextView
                    android:id ="@+id/uc_tv_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/friends_cn"
                    android:textColor="@color/usercenterLightTextColor"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toRightOf="@+id/uc_tv_user_followers"
                    app:layout_constraintBottom_toBottomOf="@+id/uc_tv_user_followers"/>

                <TextView
                    android:id ="@+id/uc_tv_user_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8sp"
                    android:text="@string/zero"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@+id/uc_tv_friends"
                    app:layout_constraintBottom_toBottomOf="@+id/uc_tv_friends"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id ="@+id/uc_toolbar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                app:layout_collapseMode="pin">
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/uc_more_detial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/uc_create_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="创建时间："
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/uc_verified"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="认证信息：未认证"
            android:gravity="center_vertical"/>


        <ImageButton
            android:id="@+id/uc_back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_arrow_back_light_blue_500_24dp"
            android:background="@drawable/bg_uc_backbtn"/>


    </LinearLayout>


        <!--<androidx.constraintlayout.widget.ConstraintLayout-->
            <!--android:id="@+id/uc_status_list"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:visibility="gone">-->

            <!--<TextView-->
                <!--android:id ="@+id/uc_tv_status"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="30dp"-->
                <!--android:paddingStart="16dp"-->
                <!--android:paddingEnd="16dp"-->
                <!--android:text="@string/all_status"-->
                <!--android:textColor="@color/usercenterLightTextColor"-->
                <!--android:textSize="14sp"-->
                <!--android:background="#fff"-->
                <!--android:gravity="center|start"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toTopOf="parent" />-->

            <!--<androidx.recyclerview.widget.RecyclerView-->
                <!--android:id="@+id/uc_rv_status_list"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/uc_tv_status">-->

            <!--</androidx.recyclerview.widget.RecyclerView>-->


        <!--</androidx.constraintlayout.widget.ConstraintLayout>-->





</androidx.coordinatorlayout.widget.CoordinatorLayout>